--- a/sources.bib
+++ b/sources.bib
@@ -164,6 +164,31 @@
 MRREVIEWER = {J.\ M.\ Boardman},
 }
 
+@article{dold,
+author = {Dold, Albrecht},
+journal = {Mathematische Zeitschrift},
+keywords = {topology},
+language = {ger},
+pages = {25-35},
+title = {Erzeugende der Thomschen Algebra ....},
+url = {http://eudml.org/doc/169584},
+volume = {65},
+year = {1956},
+}
+
+@book {kosinski,
+    AUTHOR = {Kosinski, Antoni A.},
+     TITLE = {Differential manifolds},
+    SERIES = {Pure and Applied Mathematics},
+    VOLUME = {138},
+ PUBLISHER = {Academic Press, Inc., Boston, MA},
+      YEAR = {1993},
+     PAGES = {xvi+248},
+      ISBN = {0-12-421850-4},
+   MRCLASS = {57-02},
+  MRNUMBER = {1190010},
+MRREVIEWER = {Ian\ Hambleton},
+}
 
 %J. Milnor. On the cobordism ring Ω∗ and a complex analogue, part i. American Journal of
 Mathematics, 82(3):505–521, 1960.
