--- a/sources.bib
+++ b/sources.bib
@@ -190,6 +190,20 @@ year = {1956},
 MRREVIEWER = {Ian\ Hambleton},
 }
 
+@book {stasheff,
+    AUTHOR = {Milnor, John W. and Stasheff, James D.},
+     TITLE = {Characteristic classes},
+    SERIES = {Annals of Mathematics Studies},
+    VOLUME = {No. 76},
+ PUBLISHER = {Princeton University Press, Princeton, NJ; University of Tokyo
+              Press, Tokyo},
+      YEAR = {1974},
+     PAGES = {vii+331},
+   MRCLASS = {57-01 (55-02 55F40 57D20)},
+  MRNUMBER = {440554},
+MRREVIEWER = {F.\ Hirzebruch},
+}
+
 %J. Milnor. On the cobordism ring Ω∗ and a complex analogue, part i. American Journal of
 Mathematics, 82(3):505–521, 1960.
 
